# glass

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  install_bazel.bat
res/: BUILD.bazel  fragment_shader.glsl  vertex_shader.glsl
res/shaders/: vertex_shader.glsl
src/: BUILD.bazel  Shader.cc  Shader.h  ebo.cpp  ebo.hpp  main.cc  main.cpp  obj_loader.cpp  obj_loader.hpp  raw_model.cpp  raw_model.hpp  renderer.cpp  renderer.hpp  shader.cc  shader.cpp  shader.h  shader.hpp  texture.cpp  texture.hpp  utils.cpp  utils.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp  window.cc  window.cpp  window.h  window.hpp
