workspace(name = "glass")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")


#======= Python ======
http_archive(
    name = "rules_python",
    sha256 = "8c8fe44ef0a9afc256d1e75ad5f448bb59b81aba149b8958f02f7b3a98f5d9b4",
    strip_prefix = "rules_python-0.13.0",
    url = "https://github.com/bazelbuild/rules_python/archive/refs/tags/0.13.0.tar.gz",
)

#======= GLFW =======
new_git_repository(
    name = "glfw",
    remote = "https://github.com/glfw/glfw.git",
    commit = "8d7e5cdb49a1a5247df612157ecffdd8e68923d2",
    build_file = "@//third_party/glfw:glfw.BUILD",
)

#======= GLAD =======
http_archive(
    name = "glad",
    url = "https://github.com/Dav1dde/glad/archive/v0.1.36.zip",
    strip_prefix = "glad-0.1.36/glad/",
    build_file = "@//third_party/glad:glad.BUILD",
)


#======== STB IMAGES ======
new_git_repository(
        name = "stb",
        remote = "https://github.com/jiaobao/stb_image",
        branch = "master",
        build_file = "@//third_party/stb:stb.BUILD",
)

#====== GLM ===========
new_git_repository(
        name = "glm",
        remote = "https://github.com/g-truc/glm",
        branch = "0.9.8",
        build_file = "@//third_party/glm:glm.BUILD",
)

